@@ -1,3 +1,11 @@
+2007-01-15  Mark Grondona <mgrondona@llnl.gov>
+
+	* Makefile.am, src/pdsh/Makefile.am, doc/Makefile.am,
+	  Makefile.in, src/pdsh/Makefile.in, doc/Makefile.in :
+	  Generate some 'uninstall-local' targets so that 'make uninstall'
+	  works as expected. Generate warning if files still exist
+	  in pkglibdir after uninstall. Rerun ./bootstrap.
+
 2006-12-12  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/modules/sshcmd.c : Fix mid-block declaration that
